@@ -9,7 +9,7 @@ Curl and libcurl 7.19.8
 
 This release includes the following changes:
 
- o 
+ o support SSL_FILETYPE_ENGINE for client certificate
 
 This release includes the following bugfixes:
 
